--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 requests = "^2.28.1"
 bs4 = "^0.0.1"
 convertapi = "^1.5.0"
+pandas = "^1.5.1"
 
 [tool.poetry.dev-dependencies]
 
